--- a/website/static/schedule.css
+++ b/website/static/schedule.css
@@ -110,6 +110,9 @@ body h5 {
 
 /* Responsive Layout */
 @media (max-width: 1200px) {
+    #header-links, #header-notif, #header-profile, #footer {
+        font-size: 0.75rem !important;
+    }
     body h5 {
         font-size: 1rem;
     }
