--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -20,17 +20,16 @@
     <div class="container">
         <header class="d-flex align-items-center justify-content-between py-2 mb-3 border-bottom"
             style="box-shadow: 0 8px 4px -4px rgba(0, 0, 0, 0.05);">
-            <div class="d-flex align-items-center col-md-6">
+            <div class="d-flex align-items-center col-md-6" id="header-links">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none me-3">
                     <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
                 </a>
                 <!-- Navigation Buttons -->
                 <ul class="nav">
                     <li>
-                        <a href="{{ url_for('main.unavailability') }}" class="nav-link px-2 text-dark">
+                        <a href="{{ url_for('main.unavailability') }}" class="nav-link px-2 text-secondary">
                             <i class="bi bi-check2-circle"></i>
-                            Availability
-                            <i class="bi bi-dot dot-icon"></i>
+                            Unavailability
                         </a>
                     </li>
                     <li>
@@ -45,6 +44,15 @@
                             Events
                         </a>
                     </li>
+                    {% if admin == "Admin" %}
+                    <li>
+                        <a href="{{ url_for('main.admin') }}" class="nav-link px-2 text-dark">
+                            <i class="bi bi-person-gear"></i>
+                            Admin
+                            <i class="bi bi-dot dot-icon"></i>
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
             <!-- Dropdown Section -->
@@ -54,7 +62,7 @@
                     <button class="btn p-0 border-0 bg-transparent shadow-none" type="button" id="notificationsDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="position-relative">
-                            <i class="bi bi-bell-fill"></i>
+                            <i class="bi bi-bell-fill" id="header-notif"></i>
                             <!-- Notification Dot -->
                             <span class="notification-dot"></span>
                         </span>
@@ -79,16 +87,48 @@
                 <li class="nav-item dropdown">
                     <button class="btn p-0 border-0 bg-transparent shadow-none" type="button" id="profileDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
+                        <span id="header-profile">
+                            Welcome, {{ fname }}
+                            <i class="bi bi-person-fill"></i>
+                        </span>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="profileDropdown" style="min-width: 200px;">
+                    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="profileDropdown"
+                        style="min-width: 350px;">
                         <li class="dropdown-header d-flex align-items-center">
                             <i class="bi bi-person-fill me-2"></i> Profile Info
                         </li>
                         <li class="dropdown-divider mt-0"></li>
+                        <!-- Employee Info Section -->
+                        <table class="table table-borderless text-dark">
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Email:</th>
+                                    <td>{{ email }}</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Hourly Wage:</th>
+                                    <td>${{ wage }}</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Minimum Hours:</th>
+                                    <td>{{ minHours }} hrs</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Maximum Hours:</th>
+                                    <td>{{ maxHours }} hrs</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Role:</th>
+                                    <td>{{ admin }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
                         <li class="dropdown-divider"></li>
                         <!-- Logout Button -->
                         <li class="d-flex justify-content-end px-2">
-                            <a href="{{ url_for('auth.logout') }}" class="btn btn-sm btn-light border text-danger" id="logout-link">
+                            <a href="{{ url_for('auth.logout') }}"
+                                class="btn btn-sm btn-light hover-dark-bg border border-dark" id="logout-link">
+                                <i class="bi bi-door-open"></i>
                                 Sign out
                             </a>
                         </li>
@@ -113,25 +153,18 @@
                                id="generate-schedule-button"
                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none"
                                onclick="openGenerateScheduleModal()">
-                               <i class="bi bi-plus-circle me-2"></i>
+                               <i class="bi bi-gear me-2"></i>
                                Generate Schedule
                             </a>
                         </li>
                         <li>
                             <button id="approve-schedule-button" 
                                 style="display:none;"
-                                class="btn btn-success">
+                                class="btn btn-success" onclick="approveSchedule()">
                                 Approve Schedule
                             </button>
                         </li>
                     </ul>
-                </div>
-                <div class="p-3 bg-light border rounded shadow-sm">
-                    <h5><i class="bi bi-card-checklist me-1"></i>
-                        Selections
-                    </h5>
-                    <hr>
-                    <div id="availabilityList" class="availability-list"> </div>
                 </div>
             </aside>
 
@@ -143,14 +176,14 @@
                             <button type="button" id="prevWeek" class="btn p-0 me-2 shadow-none" onclick=updateWeek(-1)>
                                 <i class="bi bi-chevron-left"></i>
                             </button>
-                            <input type="week" id="availabilityDate" name="availabilityDate" class="ms-2 me-2">
+                            <input type="week" id="adminDate" name="adminDate" class="ms-2 me-2">
                             <button type="button" id="nextWeek" class="btn p-0 ms-2 shadow-none" onclick=updateWeek(1)>
                                 <i class="bi bi-chevron-right"></i>
                             </button>
                         </div>
                         <h4 class="text-center m-0">
-                            <i class="bi bi-check2-circle me-2"></i>
-                            Admin - generate new schedule
+                            <i class="bi bi-person-gear me-2"></i>
+                            Admin
                         </h4>
                          <!-- Dropdown -->
                          <div class="dropdown">
@@ -214,8 +247,7 @@
                                     <button
                                         type="button"
                                         class="btn btn-primary"
-                                        onclick="confirmGenerateSchedule()"
-                                    >
+                                        onclick="confirmGenerateSchedule()">
                                         Confirm
                                     </button>
                                 </div>
@@ -229,7 +261,7 @@
             </main>
         </div>
     </div>
-    <div class="container">
+    <div class="container" id="footer">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top"
             style="box-shadow: 0 -8px 4px -4px rgba(0, 0, 0, 0.05);">
             <ul class="nav col-md-4 justify-content-start">
@@ -238,7 +270,7 @@
 
             <a href="/"
                 class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
+                <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50" id="logo">
             </a>
 
             <ul class="nav col-md-4 justify-content-end">
